@@ -15,6 +15,7 @@ o Show OpenAction in -info
 o Show more form information in -info
 o Allow JSON / PDF syntax in dict processing and object exploration
 o Show %Bookmark text when stamping text
+o Font operations now include fonts within xobjects
 
 Fixes:
 
